# bujo

./: .dockerignore  .gitignore  .mcp.json  CREDITS.md  Dockerfile  README.md  components.json  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  docs-guard.yml  screenshots.yml
.obsidian/: workspace.json
api/: feedback.ts  sync.ts
docker/: 02-security.sql  api-nginx.conf  initdb.sql  nginx.conf  security-headers.conf
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  COMPETITIVE-FEATURES.md  DATA_MODEL.md  DECISIONS.md  FEATURE-BACKLOG-500.md  FEATURE-CARD-AUDIT.md  FEATURES.md  FEATURE_GUIDE.md  FRONTEND_SPEC.md  GOOGLE_DRIVE.md  PIPELINE.md  PRD.md  PRODUCT_GAPS.md  RULES.md  SECURITY.md  SETTINGS-AUDIT.md  TICKETS.md  UX-CARD-LAYOUT.csv  UX-CARD-LAYOUT.md  WHY.md  WORKLOG.md  supabase.sql
docs/auth/: google-oauth-setup.md
docs/data-engineering/: schema-and-pipelines.mdx  schema.sql
docs/desktop/: TAURI.md  desktop-and-sync.mdx
docs/diagrams/: uml.mdx
docs/engineering/: README.md  architecture-view.md  backend-view.md  data-engineering-view.md  ml-analytics-view.md  uml.md  user-view.md
docs/features/: coach-and-card-system.md  coaching-academy.md  daily-use-guide.md  (+4 more)
scripts/: capture-screenshots.mjs  ship.sh  smoke-views.mjs
src/: App.tsx  index.css  main.tsx  store.test.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
(+262 files in other folders)
