[package]
name = "bujo"
version = "0.0.0"
description = "bujo — a minimal, private, local-first digital bullet journal"
authors = ["Sathish Kumar"]
edition = "2021"
rust-version = "1.77.2"

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
# The "_lib" suffix may seem redundant but it is necessary to make the lib name
# unique and avoid issues with the binary on some platforms (Windows).
[lib]
name = "bujo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
